--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "scripts": {
-    "start": "concurrently -n srv,elm \"nodemon .\" \"elm reactor\""
+    "start": "concurrently -n srv,elm \"nodemon .\" \"npm run watch_\"",
+    "watch_": "elm-live src/Main.elm --no-server -- --output public/elm.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "elm": "^0.19.0-no-deps",
+    "elm-live": "^4.0.0-alpha.13",
     "koa": "^2.8.1",
     "koa-accesslog": "^0.0.2",
-    "koa-router": "^7.4.0"
+    "koa-proxy": "^1.0.0-alpha.3",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
